# moviepy

./: .buildinfo  .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.txt  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.html  LICENCE.txt  MANIFEST.in  Pipfile  README.md  README.rst  VideoClip_api.html  appveyor.yml  blur_sensitive.py  cookbook.html  crash_course.html  discussionDependencies.html  docker.html  examples.html  ez_setup.py  find_latest_imagemagick_version.py  first_steps.html  forDevelopers.html  gallery.html  genindex.html  index.html  install.html  llms-full.txt  np-modindex.html  objects.inv  opencv_instructions.html  output.html  pip install moviepy  (+17 more)
.c9/metadata/: tab15  tab9
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github/workflows/: build-docs.yml  ci.yml  codeql-analysis.yml  concatenate_docs.yml  format_check.yml  formatting_linting.yml  publish.yml  pythonpackage.yml  test_suite.yml  update-version.yml
_modules/: AudioClip.html  Clip.html  VideoClip.html  ffmpeg.html  index.html  moviepy.html
_modules/moviepy/: Clip.html  Effect.html  config.html  decorators.html  tools.html
_sources/: FAQ.rst.txt  FAQ.txt  VideoClip_api.txt  cookbook.txt  crash_course.txt  discussionDependencies.txt  examples.txt  first_steps.txt  forDevelopers.txt  gallery.txt  index.rst.txt  index.txt  install.txt  opencv_instructions.rst.txt  ref.txt  todolist.txt  whatsnew.txt
_sources/advanced_tools/: advanced_tools.rst.txt
_sources/advanced_uses/: advanced_uses.txt
_sources/cookbook/: XtremCompoShape.txt  blurred_face.txt  compoFromImage.txt  credits.txt  layeredEffect.txt
_sources/crash_course/: crash_course.txt
_sources/developer_guide/: developers_install.rst.txt
_sources/examples/: compo_from_image.rst.txt  compo_from_image.txt  dancing_knights.rst.txt  dancing_knights.txt  example_with_sound.rst.txt  example_with_sound.txt  examples.txt  freezepainting.txt  headblur.rst.txt  headblur.txt  logo.rst.txt  logo.txt  masked_credits.rst.txt  masked_credits.txt  mountainMask.txt  moving_letters.txt  musicVideo.txt  painting_effect.txt  soundExample.txt  (+11 more)
_static/: documentation_options.js  flasky.css  moviepy.css  moviepy.css~
advanced_tools/: advanced_tools.html
advanced_uses/: advanced_uses.html
appveyor/: run_with_env.cmd
ci/: bootstrap.py
cookbook/: XtremCompoShape.html  blurred_face.html  compoFromImage.html  credits.html  gradientEffect.html  layeredEffect.html  tracking.html
crash_course/: crash_course.html
developer_guide/: contribution_guidelines.html  developers_install.html  index.html  maintainers_publish.html
docs/: FAQ.rst  Makefile  conf.py  docker.md  docker.rst  examples.rst  first_steps.rst  forDevelopers.rst  gallery.rst  index.rst  install.rst  make.bat  makehtml.sh  opencv_instructions.rst  readme.txt  ref.rst  updating_to_v2.rst
examples/: README.rst  XtremCompoShape.html  blended_composition.py  cancel_process.py  clips_array.py  compo_from_image.html  compo_from_image.py  dancing_knights.html  dancing_knights.py  example_with_sound.html  example_with_sound.py  examples.html  freezepainting.html  headblur.html  headblur.py  logo.html  logo.py  masked_credits.html  masked_credits.py  mountainMask.html  moving_letters.html  moving_letters.py  musicVideo.html  painting_effect.html  painting_effect.py  quick_recipes.html  severalCharacters.html  several_characters.html  soundExample.html  soundtrack.py  star_worms.html  star_worms.py  starwarslike.html  textmovingletters.html  the_end.html  the_end.py  ukulele_concerto.html  ukulele_concerto.py
first_steps/: crash_course.html  example_code.html  good_practice.html  sound_overview.html  video_overview.html
getting_started/: FAQ.html  advanced_tools.html  audio.html  audioclips.html  basics.html  clips.html  compositing.html  docker.html  effects.html  efficient_moviepy.html  getting_started.html  index.html  install.html  moviepy_10_minutes.html  quick_presentation.html  updating_to_v2.html  videoclips.html  working_with_matplotlib.html
media/: big_buck_bunny_0_30.webm  big_buck_bunny_432_433.webm  clip1024.flv  no_duration.webm  subtitles-unicode.srt  subtitles.srt  traj.txt  transparent.webm
minimal_moviepy/: Clip.py  compat.py  config.py  config_defaults.py  decorators.py  editor.py  tools.py
moviepy/: .config_defaults.py.swp  AudioClip.py  Clip.py  Effect.py  README.md  Study.py  VideoClip.py  __init__.py  all.py  compat.py  conf.py  config.py  config_defaults.py  cython_blit.c  cython_blit.pyx  decorators.py  editor.py  ffmpeg.py  iterframes.py  moviepy.conf  multithreading.py  tools.py  types.py  utils.py  version.py
ref/: AudioClip.html  AudioClip_ref.html  Clip.html  Clip_ref.html  VideoClip.html  VideoClip_ref.html  audiofx.html  audiotools.html  code_origanization.html  decorators.html  ffmpeg.html  ref.html  videofx.html  videotools.html
reference/: index.html
requirements/: base.txt  docs.txt  optional.txt  test.txt
scripts/: concatenate_docs.py  get-latest-imagemagick-win.py
tests/: README.rst  conftest.py  download_media.py  module_versions.py  test_AudioClips.py  test_BitmapClip.py  test_Clip.py  test_ImageClip.py  test_ImageSequenceClip.py  test_PR.py  test_SubtitlesClip.py  test_TextClip.py  test_VideoClip.py  test_VideoFileClip.py  test_Videos.py  test_audiotools.py  test_compositing.py  test_doc_examples.py  test_editor.py  test_examples.py  test_ffmpeg_read_bitrate.py  test_ffmpeg_reader.py  test_ffmpeg_tools.py  test_ffmpeg_writer.py  test_fx.py  test_helper.py  test_install.py  test_issues.py  test_misc.py  test_multithreading.py  test_resourcerelease.py  test_resourcereleasedemo.py  test_silent_import.py  test_tools.py  test_utils.py  test_videotools.py  tests.py
user_guide/: compositing.html  create_effects.html  index.html  loading.html  modifying.html  rendering.html
v1.0.3/: genindex.html  index.html  objects.inv  opencv_instructions.html  py-modindex.html  search.html  searchindex.js
(+1053 files in other folders)
